# rxscreen

./: .gitignore  Cargo.toml  README.md  build.rs
examples/: save-sceenshot.rs  take-raw-screenshot.rs
src/: ffi.rs  graphics.rs  lib.rs  monitor.rs  mouse.rs  shm.rs
src/ffi/: constants.rs  events.rs  ffi.rs  mod.rs  mouse.rs  shm.rs  xrandr.rs
