[package]
name = "rxscreen"
description = "A wrapper around libx11 to capture screenshots and save them"
version = "0.1.7"
authors = ["27justin <me@justin.cx>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/27justin/rxscreen"
keywords = ["x11", "screenshot", "display", "xrandr", "mit-shm"]
readme = "README.md"

build = "build.rs"

exclude = [ "./examples" ]
autoexamples = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
save = ["dep:image"]

shm = []
xrandr = []
mouse = []

[dependencies]
image = { version = "^0.23", optional = true }
libc = "0.2"

[package.metadata.docs.rs]
features = [ "xrandr", "shm", "mouse" ]
